# chord-voicer

./: LICENSE  README.md  chord-voicer.cabal
src/: Fingering.hs  Main.hs  Note.hs  Output.hs  Scale.hs
