cabal-version:       2.4
name:                chord-voicer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/aaronhipple/chord-voicer#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Aaron Hipple
maintainer:          ahipple@gmail.com
copyright:           Aaron Hipple
category:            Web
build-type:          Simple
extra-source-files:  README.md

common shared-properties
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5
  ghc-options:
    -Wall

executable chord-voicer
  import: shared-properties
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:
    hashable,
    unordered-containers,
    base >= 4.7 && < 5
